Use java 11 (#1050)