@@ -27,6 +27,7 @@ import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
 import java.util.HashSet;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
@@ -43,7 +44,7 @@ class LotteryNumbersTest {
   @Test
   void testGivenNumbers() {
     LotteryNumbers numbers = LotteryNumbers.create(
-            new HashSet<>(Arrays.asList(1, 2, 3, 4)));
+            Set.of(1, 2, 3, 4));
     assertEquals(numbers.getNumbers().size(), 4);
     assertTrue(numbers.getNumbers().contains(1));
     assertTrue(numbers.getNumbers().contains(2));
@@ -54,7 +55,7 @@ class LotteryNumbersTest {
   @Test
   void testNumbersCantBeModified() {
     LotteryNumbers numbers = LotteryNumbers.create(
-            new HashSet<>(Arrays.asList(1, 2, 3, 4)));
+            Set.of(1, 2, 3, 4));
     assertThrows(UnsupportedOperationException.class, () -> numbers.getNumbers().add(5));
   }
   
@@ -67,12 +68,12 @@ class LotteryNumbersTest {
   @Test
   void testEquals() {
     LotteryNumbers numbers1 = LotteryNumbers.create(
-            new HashSet<>(Arrays.asList(1, 2, 3, 4)));
+            Set.of(1, 2, 3, 4));
     LotteryNumbers numbers2 = LotteryNumbers.create(
-            new HashSet<>(Arrays.asList(1, 2, 3, 4)));
+            Set.of(1, 2, 3, 4));
     assertEquals(numbers1, numbers2);
     LotteryNumbers numbers3 = LotteryNumbers.create(
-            new HashSet<>(Arrays.asList(11, 12, 13, 14)));
+            Set.of(11, 12, 13, 14));
     assertNotEquals(numbers1, numbers3);
   }
 }
